--- a/pom.xml
+++ b/pom.xml
@@ -95,5 +95,12 @@
             <artifactId>velocity-engine-core</artifactId>
             <version>2.4.1</version>
         </dependency>
+
+        <!-- 机器人依赖 -->
+        <dependency>
+            <groupId>com.mikuac</groupId>
+            <artifactId>shiro</artifactId>
+            <version>2.4.1</version>
+        </dependency>
     </dependencies>
 </project>
